leptos_macro/tests/ui/component.stderr
error: supported fields are `optional`, `optional_no_strip`, `strip_option`, `default`, `into`, `attrs` and `name`
  --> tests/ui/component.rs:10:31
   |
10 | fn unknown_prop_option(#[prop(hello)] test: bool) -> impl IntoView {
   |                               ^^^^^

error: `optional` conflicts with mutually exclusive `optional_no_strip`
  --> tests/ui/component.rs:16:12
   |
16 |     #[prop(optional, optional_no_strip)] conflicting: bool,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `optional` conflicts with mutually exclusive `strip_option`
  --> tests/ui/component.rs:23:12
   |
23 |     #[prop(optional, strip_option)] conflicting: bool,
   |            ^^^^^^^^^^^^^^^^^^^^^^

error: `optional_no_strip` conflicts with mutually exclusive `strip_option`
  --> tests/ui/component.rs:30:12
   |
30 |     #[prop(optional_no_strip, strip_option)] conflicting: bool,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unexpected end of input, expected `=` or `(`

       = help: try `#[prop(default = 5 * 10)]`
  --> tests/ui/component.rs:35:1
   |
35 | #[component]
   | ^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected end of input, expected one of: identifier, `::`, `<`, `_`, literal, `const`, `ref`, `mut`, `&`, parentheses, square brackets, `..`, `const`

       = help: try `#[prop(default = 5 * 10)]`
  --> tests/ui/component.rs:40:1
   |
40 | #[component]
   | ^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)

error: destructured props must be given a name e.g. #[prop(name = "data")]
  --> tests/ui/component.rs:48:29
   |
48 | fn destructure_without_name((default, value): (bool, i32)) -> impl IntoView {
   |                             ^^^^^^^^^^^^^^^^
